--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version:'3'
+version: '3'
 services:
   flaskapp:
-    build: ./
+    build: .
     ports:
-      - "5000:5000"
+      - "80:80"
     network_mode: host
 
 
